# tinker2014

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  start.py  tinkersetup.bash
.travis/: test_build.bash
decision/src/AnswerQuestions/: CMakeLists.txt  README.md  package.xml
decision/src/AnswerQuestions/scripts/: answer_node.py
decision/src/answer_questions/: CMakeLists.txt  README.md  package.xml
decision/src/answer_questions/scripts/: answer_node.py
dev/: .gitignore
dev/src/detec_people/: CMakeLists.txt  histo.h  main_ground_based_people_detection.cpp
dev/src/detect_people/: CMakeLists.txt  histo.h  main_ground_based_people_detection.cpp  package.xml  people_detection.cpp
driver/src/dSay/: CMakeLists.txt  package.xml
driver/src/dSay/scripts/: say_node.py
driver/src/d_cv/: CMakeLists.txt  README.md  package.xml
driver/src/d_cv/test/: reading_image.cpp  test_reading_image.cpp  writing_image.cpp
driver/src/d_firmware/: .gitignore  CMakeLists.txt  README.md  package.xml
driver/src/d_firmware/script/: fw_send_client_demo.py  fw_send_service.py
driver/src/d_firmware/src/d_firmware/script/: fw_send_client_demo.py
driver/src/d_firmware/src/d_firmware/srv/: SendCommand.srv
driver/src/d_firmware/srv/: SendCommand.srv
driver/src/d_pcl/: CMakeLists.txt  README.md  package.xml  primesense_to_pcl.launch
driver/src/d_pcl/include/d_pcl/: reading_pointcloud.h
driver/src/d_pcl/launch/: read_pcds.launch  record_pcds_from_primesense.launch  write_pcds.launch  write_pcds_from_primesense.launch
driver/src/d_pcl/src/: reading_pointcloud.cpp
driver/src/d_pcl/test/: reading_pcd.cpp  reading_pcds.cpp  show_xyzrgb.cpp  sub_xyz.cpp  sub_xyzrgb.cpp  writing_pcds.cpp
driver/src/d_reading_image/: CMakeLists.txt  package.xml
driver/src/d_reading_image/src/: reading_image.cpp
driver/src/d_ros_to_cv/: CMakeLists.txt  README.md  package.xml
driver/src/d_say/: CMakeLists.txt  README.md  package.xml
driver/src/d_say/scripts/: say_node.py
driver/src/d_say/srv/: IsPlaying.srv
logic/src/l_sphinx_wrapper/: CMakeLists.txt  README.md  launches  package.xml
logic/src/l_sphinx_wrapper/launches/: answer.launch  tasks
logic/src/l_sphinx_wrapper/scripts/: recognizer.py
logic/src/l_sphinx_wrapper/srv/: ChangeFSG.srv  ChangeTask.srv
logic/src/l_sphinx_wrapper/test/: change_task.py  fake_recognizer.py
share/AnswerQuestions/: questions.txt
share/AnswerQuestions/resource/: answers.txt
share/answer_questions/: answers.txt  questions.txt
ui/answer_questions/: README.md  fetch_google.py  fetch_google_voice.py
ui/l_sphinx_wrapper/: README.md  init.py  input2dict.py  jsgf2fsg.py
ui/start/: README.md  prepare_speechrec.py  settings.ini  tinker_start.py
ui/start/scripts/: answer_questions.tinkerstart  fair.tinkerstart  main.tinkerstart  record_pcd.tinkerstart
